--- a/case-study.html
+++ b/case-study.html
@@ -489,7 +489,7 @@
           The auto instrumentation calls a single function which automatically detects and generates telemetry data. It then sends this data to the chosen endpoint (where the connector is located, described below), avoiding the need to add extra lines of code to the application.
         </p>
         <figure>
-          <img src="assets/images/case-study/opentelemetry.svg" class="case-study-imagen small" />
+          <img src="assets/images/case-study/opentelemetry.svg" class="case-study-image small" />
         </figure>
         <br>
         <p>
@@ -527,7 +527,6 @@
         <figure>
           <img src="assets/images/case-study/database.png" class="case-study-image" />
         </figure>
-        <br>
         <p>
           We chose to use Timescale specifically, which is based on PostgreSQL, and is also one of the most popular open-source object-relational database systems. The proven maturity and high performance of Timescale and PostgreSQL made it a natural choice.
         </p>
