Updated Team back

--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
   <div class="section header" id="team-header">
     <div class="container">
       <div class="hero-text-container">
-        <h1 class="h1 centered">Team</h1>
+        <h1 class="h1 centered">The Team</h1>
       </div>
     </div>
   </div>
