Fixed Telemetry Heading

--- a/case-study.html
+++ b/case-study.html
@@ -148,7 +148,7 @@
         <br />
         
         <!-- Section 2 -->
-        <h2 class="h2">2 Telemetry</h2>
+        <h2 class="h2">2. Telemetry</h2>
         <h3>2.1 What is telemetry?</h3>
         <p>
           Telemetry is “the collection of measurements, or other data, at remote or inaccessible points and their automatic transmission to receiving equipment for monitoring." Put another way, telemetry is a collection of data points that represent information about an application's health and can be used for monitoring and observability purposes. Want to know how your system is doing? Look at the telemetry data.
