removed bolding on toc

--- a/case-study.html
+++ b/case-study.html
@@ -971,7 +971,7 @@
         'smoothScrolling': true, //enable or disable smooth scrolling on click
         'prefix': 'toc', //prefix for anchor tags and class names
         'highlightOnScroll': true, //add class to heading that is currently in focus
-        'highlightOffset': 100, //offset to trigger the next headline
+        //'highlightOffset': 100, //offset to trigger the next headline
       });
     </script>
 </body>
