--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:regular,500,600,700"]  }});</script>
     <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-    <link href="assets/images/logo-color.png" rel="shortcut icon" type="image/x-icon">
-    <link href="assets/images/logo-color.png" rel="apple-touch-icon">
+    <link href="assets/images/logo-color.svg" rel="shortcut icon" type="image/x-icon">
+    <link href="assets/images/logo-color.svg" rel="apple-touch-icon">
     <script src="https://kit.fontawesome.com/d019875f94.js" crossorigin="anonymous"></script>
     <meta name="image" property="og:image" content="assets/images/abstract-service-pic.png" />
   </head>
@@ -35,7 +35,7 @@
               </a>
             </nav>
             <div class="login-buttons">
-              <a href="https://github.com/try-horus" target="_blank">
+              <a href="https://github.com/try-horus/horus-compose" target="_blank">
                 <span style="color: #081b53">
                   <i class="fab fa-github fa-lg"></i>
                 </span>
@@ -79,7 +79,7 @@
                     <div class="primary-button-text">Try It Out</div>
                   </a>
                 </div>
-                <div class="tab-image-wrap"><img src="assets/images/Storage and Querying.jpg" loading="lazy" alt=""></div>
+                <div class="tab-image-wrap"><img src="assets/images/Storage and Querying.png" loading="lazy" alt=""></div>
               </div>
             </div>
           </div>
