--- a/team.html
+++ b/team.html
@@ -11,8 +11,8 @@
   <script type="text/javascript">WebFont.load({ google: { families: ["Inter:regular,500,600,700"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="assets/images/logo-color.png" rel="shortcut icon" type="image/x-icon">
-  <link href="assets/images/logo-color.png" rel="apple-touch-icon">
+  <link href="assets/images/logo-color.svg" rel="shortcut icon" type="image/x-icon">
+  <link href="assets/images/logo-color.svg" rel="apple-touch-icon">
   <script src="https://kit.fontawesome.com/d019875f94.js" crossorigin="anonymous"></script>
 </head>
 
@@ -35,7 +35,7 @@
             </a>
           </nav>
           <div class="login-buttons">
-            <a href="https://github.com/try-horus" target="_blank">
+            <a href="https://github.com/try-horus/horus-compose" target="_blank">
               <span style="color: #081b53">
                 <i class="fab fa-github fa-lg"></i>
               </span>
