--- a/case-study.html
+++ b/case-study.html
@@ -761,7 +761,7 @@
         </figure>
         <br>
         <p>
-          Then integrate it into your routes according to the <a href="www.npmjs.com/package/horus-agent">npm README</a>. Note that the MetricsAgent is only needed in the root service, whereas the TracingAgent should be placed in each dependent service so as to capture every single span.
+          Then integrate it into your routes according to the <a href="https://www.npmjs.com/package/horus-agent" target="_blank">npm README</a>. Note that the MetricsAgent is only needed in the root service, whereas the TracingAgent should be placed in each dependent service so as to capture every single span.
         </p>
         <br>
         <p>
