--- a/case-study.html
+++ b/case-study.html
@@ -21,8 +21,8 @@
         (n.className += t + "touch");
     })(window, document);
   </script>
-  <link href="assets/images/logo-color.svg" rel="shortcut icon" type="image/x-icon" />
-  <link href="assets/images/logo-color.svg" rel="apple-touch-icon" />
+  <link href="assets/images/logo-color.png" rel="shortcut icon" type="image/x-icon" />
+  <link href="assets/images/logo-color.png" rel="apple-touch-icon" />
   <script src="https://kit.fontawesome.com/d019875f94.js" crossorigin="anonymous"></script>
   <meta name="image" property="og:image" content="assets/images/abstract-service-pic.png" />
 </head>
