Updated CB LinkedIn link

--- a/team.html
+++ b/team.html
@@ -115,8 +115,7 @@
                     </a>
                   </li>
                   <li>
-                    <!-- ADD CB linkedin HERE-->
-                    <a href="" target="_blank">
+                    <a href="https://www.linkedin.com/in/callie-buruchara/" target="_blank">
                       <span class="team-member-icon">
                         <i class="fab fa-linkedin"></i>
                       </span>
