Update CB LinkedIn Link

--- a/case-study.html
+++ b/case-study.html
@@ -891,8 +891,7 @@
                           </a>
                         </li>
                         <li>
-                          <!-- Add CB linkedin-->
-                          <a href="" target="_blank">
+                          <a href="https://www.linkedin.com/in/callie-buruchara/" target="_blank">
                             <span class="team-member-icon">
                               <i class="fab fa-linkedin"></i>
                             </span>
